feat: 파일명이 담긴 리스트를 반환하는 기능 추가